Fixed: StarRating alignment

--- a/frontend/src/Components/StarRating.css
+++ b/frontend/src/Components/StarRating.css
@@ -1,7 +1,7 @@
 .starRating {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
 }
 
 .backStar {
